# VarjoTrackerLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
sdk/include/: Varjo.h  Varjo_events.h  Varjo_export.h  Varjo_mr.h  Varjo_types.h  Varjo_types_mr.h  Varjo_version_defines.h
sdk/src/: CameraManager.cpp  CameraManager.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp  D3D11Shaders.cpp  DataStreamer.cpp  DataStreamer.hpp  Globals.cpp  Globals.hpp  MultiLayerView.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Session.cpp  Session.hpp  UI.cpp  UI.hpp  Undistorter.cpp  Undistorter.hpp
src/: Application.cpp  Application.hpp  GazeTracking.cpp  GazeTracking.hpp  lib.cpp  main.cpp
